directory (you did remember to do cvs update -d?). User settable versions
of this will happen when the general mechanism for doing that is available.
2. Added set/unset/anntalk commands. If you unset/anntalk then you will
no longer see many of the of talk like announces. Unfortunately you may
miss the odd useful one as well (but since everything is repeated many times
you probably won't :-)
13Sep01=======================================================================
1. did some work on making talk more intelligent and fixed a>b problem.
2. fixed a nasty problem on input when being hit with full buffers of 
data (eg at init time with large lists of node/users on fast links).
3. fixed realtime input filter changing.
4. added announce->talk conversion for routable calls when announces of the
form 'to g1tlh hello', 't g1tlh hello'  or 'g1tlh hello' appear. 
This also suppresses similar announces for users whose callsign is not the 
one in the announce.
5. Change the badwords interface to be the same as baddx, badspotter et al.
added set/badword, unset/badword and show/badword. This routine will auto
convert (and delete afterwards) the old badwords file. 
6. fix intermittant bullitin mail forwarding?
11Sep01=======================================================================
1. added IP address logging of connections
10Sep01=======================================================================
1. clear/* node_default and user_default now work.
2. in acc or rej/* you can now use (comma separated) prefixes as well as lists
of numbers for things like *_dxcc, *_itu and *_cq (eg: by_dxcc ve,w); just
remember that countries like ve and w have lots of zones and itus!
3. Added all the clear/* commands to help and added some comments about 2.
4. All filters (including *_default ones) are now reinstalled on channels in
realtime, so changing a filter does NOT require a disconnect and reconnect
cycle anymore. 