@@ -9,6 +9,7 @@ of this will happen when the general mechanism for doing that is available.
 no longer see many of the of talk like announces. Unfortunately you may
 miss the odd useful one as well (but since everything is repeated many times
 you probably won't :-)
+3. centralise the invalid callsign check.
 13Sep01=======================================================================
 1. did some work on making talk more intelligent and fixed a>b problem.
 2. fixed a nasty problem on input when being hit with full buffers of 
